--- a/templ/index.templ
+++ b/templ/index.templ
@@ -17,7 +17,7 @@ templ Index() {
     </style>
 		</head>
 		<body>
-			<h1 hx-get="/test" hx-swap="outerHTML">My Website</h1>
+			<h1>Posts</h1>
 			<p>A website created by me.</p>
 		</body>
 	</html>
