--- a/static/styles.css
+++ b/static/styles.css
@@ -1,7 +1,22 @@
-h1 {
-    color: blue;
+body {
+    background-color: var(--bg-primary);
+    color: var(--text-primary);
 }
 
-h1.a {
+a {
     text-decoration: none;
+    color: inherit;
+}
+
+.post {
+    position: relative;
+}
+
+.post_link {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 1;
 }
