--- a/templ/index.templ
+++ b/templ/index.templ
@@ -9,7 +9,7 @@ templ Index() {
 			<meta name="viewport" content="width=device-width, initial-scale=1"/>
 			<link rel="stylesheet" type="text/css" href="/static/styles.css"/>
 			<script type="text/javascript" src="/static/htmx.min.js"></script>
-			@ThemeVariables("replace me with a style from styles.templ")
+			@ThemeVariables("nord")
 			<style>
         body {
             font-family: Arial, Helvetica, sans-serif;
@@ -17,7 +17,7 @@ templ Index() {
     </style>
 		</head>
 		<body>
-			<h1>Posts</h1>
+			<h1>Silas Tompkins</h1>
 			<p>A website created by me.</p>
 		</body>
 	</html>
